tests/negative/gold/abstract3_test.gold
tests/negative/abstract3_test.toit:9:4: error: Can't instantiate abstract class
  (A).foo
   ^
Compilation failed.
